# hexSwitch

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agent-02-target-architecture.md  coverage.xml  coverage_report.txt  cursor_insights  docker-compose.build.yml  docker-compose.multi-test.yml  docker-compose.test.yml  hex-config.yaml  hexswitch_shell_spec.md  pyproject.toml  refactor-final-instructions-sequential.md  refactor-intake-report1.md  refactor-intake-report2.md  refactor-target-report.md  task.md
.cursor/commands/: templatemanager.md  toolbox.md  workflowmanager.md
.cursor/rules/: adapter-development.md  file-size-management.mdc
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  docker.yaml  pages.yaml  release.yml  version-bump.yml
devops/: Dockerfile
devops/devtool/: __init__.py  cli.py  command_runner.py  config.py  coverage_summary.py  devtool.toml  pyproject.toml  version.py
devops/devtool/commands/: __init__.py  base.py  docker.py  generic.py  setup.py  start.py  stop.py  test.py
docker/: Dockerfile
docs/: IMPLEMENTATION_PLAN.md  PROJECT_ANALYSIS_ULTIMATE.md  PROJECT_DOCUMENTATION.md  PROJECT_SANITIZE_REPORT.md  PYPI_UPLOAD.md  USAGE_DOCUMENTATION.md  _config.yml  architecture_overview.md  branch_protection.md  development_guide.md  hexswitch_shell_spec.md  index.md
docs/assets/: custom.css
example/: .env  docker-compose.yml
example/services/example1/: .gitignore  Dockerfile  hex-config.yaml  pyproject.toml
example/services/example1/src/example1/: __init__.py  main.py
example/services/example1/src/example1/application/: __init__.py
example/services/example1/src/example1/application/handlers/: __init__.py  grpc_handlers.py  http_handlers.py  mcp_handlers.py  outbound_demo_handlers.py  websocket_handlers.py
example/services/example1/src/example1/application/services/: __init__.py  example_service.py
example/services/example1/src/example1/domain/: __init__.py
example/services/example1/src/example1/domain/entities/: __init__.py
example/services/example1/src/example1/domain/ports/: __init__.py
example/services/example1/src/example1/domain/ports/repositories/: __init__.py  example_repository_port.py
example/services/example1/src/example1/infrastructure/repositories/: __init__.py  example_repository.py
example/services/example2/: .dockerignore  Dockerfile  hex-config.yaml  pyproject.toml
example/services/example2/src/example2/: __init__.py  main.py
example/services/example2/src/example2/application/handlers/: __init__.py  grpc_handlers.py
example/services/example2/src/example2/application/services/: __init__.py  example_service.py
example/services/example2/src/example2/domain/domain/entities/: __init__.py  example.py
example/services/example2/src/example2/domain/domain/ports/: __init__.py
example/services/example2/src/example2/domain/domain/ports/repositories/: __init__.py  example_repository_port.py
example/services/example2/src/example2/infrastructure/infrastructure/: __init__.py
example/services/example2/src/example2/infrastructure/infrastructure/repositories/: __init__.py  example_repository.py
example/services/example3/: Dockerfile  hex-config.yaml  pyproject.toml
example/services/example3/src/example3/: __init__.py  main.py
example/services/example3/src/example3/application/handlers/: __init__.py  mcp_handlers.py  websocket_handlers.py
example/services/example3/src/example3/application/services/: __init__.py  example_service.py
example/services/example3/src/example3/domain/ports/repositories/: example_repository_port.py
example/services/example3/src/example3/infrastructure/repositories/: example_repository.py
scripts/: build-package.py  bump-version.py  test-docker.ps1  test-docker.sh  test-multi-container.ps1  upload-package.py
src/hexswitch/: __init__.py  app.py  config.py  runtime.py  service.py
src/hexswitch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hexswitch/adapters/: __init__.py  base.py  exceptions.py
src/hexswitch/execution/: runner.py
src/hexswitch/gui/: routes.py  server.py
src/hexswitch/handlers/: __init__.py  health.py  loader.py  metrics.py
src/hexswitch/pipeline/: pipeline.py
src/hexswitch/ports/: __init__.py  decorators.py  outbound_registry.py  port.py  registry.py  strategies.py
src/hexswitch/routing/: routes.py
src/hexswitch/shared/: __init__.py  envelope.py
tests/: README.md  conftest.py
tests/fixtures/mock_adapters/: __init__.py
tests/integration/: test_docker.py  test_docker_compose.py  test_e2e_complete.py  test_hello_world.py  test_inbound_flow.py  test_multi_adapter.py  test_multi_container.py  test_observability_stress.py  test_outbound_flow.py  test_placeholder.py  test_runtime_execution.py  test_runtime_lifecycle.py  test_trace_continuity.py
tests/integration/fixtures/: config-consumer.yaml  config-processor.yaml  config-producer.yaml  mock-server.py
tests/unit/: README.md  test_adapters_base.py  test_cli.py  test_config.py  test_envelope.py  test_handlers_loader.py  test_http_adapter.py  test_ports.py  test_runtime.py  test_runtime_orchestration.py  test_strategies.py  test_version.py
tests/unit/adapters/: test_adapters_base.py  test_envelope_adapters.py  test_inbound_adapters.py  test_outbound_adapters.py
tests/unit/app/: test_app.py
tests/unit/cli/: test_cli.py  test_version.py
tests/unit/config/: test_config.py
tests/unit/domain/: __init__.py
tests/unit/execution/: test_runner.py
tests/unit/gui/: test_gui_routes.py  test_gui_server.py  test_gui_server_coverage.py
tests/unit/handlers/: test_handlers_helpers.py  test_loader.py  test_metrics_handler.py  test_outbound_ports.py  test_port_decorator.py  test_port_loader.py  test_port_registry.py
tests/unit/observability/: test_observability.py
tests/unit/pipeline/: test_pipeline.py
visual-test-lab/: README.md  README_HEXSWITCH_INTEGRATION.md  index.html  package-lock.json  package.json  temp_config.py
visual-test-lab/scripts/: export_adapters.py  hexswitch_api.py
visual-test-lab/src/: App.tsx  index.css  main.tsx
(+162 files in other folders)
