[project]
name = "hexswitch"
version = "0.1.0"
description = "Hexagonal runtime switchboard for config-driven microservices"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "HexSwitch Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

